# ForkENGINE

./: CMakeLists.txt  FindAssimp.cmake  FindNewton.cmake  FindOggVorbis.cmake  FindXAudio2.cmake  LinesCounter.ps1  README.md
docu/: History.txt  Information.txt  LICENSE.txt
docu/Concepts/: AnimationConcept.h  AudioSystemConcept.h  ComponentConcept.h  EngineConcept.h  GUIConcept.h  MementoConcept.h  SceneGraphConcept.h  VertexBufferCompoundConcept.h
docu/Notes/: Links - Lense Flare Texture Generation.txt  TODO List.txt
docu/Specs/: Coding Conventions.txt  Folder Structure.txt  ForkENGINE-Daemon Spec.txt  ForkSCript Grammar Spec.txt  ForkSCript Syntax Highlighting (Notepad++).xml  Inheritance Concept.txt
docu/Specs/ForkProjectFileFormat/: Fork FileFormat Core Spec.txt  ForkAssets File Format Spec.txt  ForkProject File Format Spec.txt  ForkScene File Format Spec.txt
docu/TeX/: Coding Conventions.pdf.lnk  Installation Guides.pdf.lnk  Name Conventions.pdf.lnk
docu/TeX/Coding Conventions/: Coding Conventions.tex
docu/TeX/Installation Guides/: Installation Guides.aux  Installation Guides.out  Installation Guides.tex
docu/TeX/Name Conventions/: Name Conventions.tex
docu/TeX/Scene Rendering/: Scene Rendering.aux  Scene Rendering.tex
editor/config/: ColorSchemes.xml  Components.xml  Layout  Settings.xml
include/fengine/: animation.h  audio.h  core.h  docu.h  engine.h  gui.h  helper.h  import.h  network.h  physics.h  scene.h  script.h  shader.h  using.h  utils.h  video.h
include/fengine/Core/: AuxiliaryMacros.h  CastToConcreteObject.h  CiString.h  DeclPtr.h  DefaultValue.h  Export.h  PackPop.h  PackPush.h  SDKGuard.h  STLHelper.h  StaticConfig.h  StdCall.h  StringModifier.h  ThreeStateAssertion.cpp  ThreeStateAssertion.h  Version.h
include/fengine/Engine/: App.h  EngineDevice.h  EngineInfo.h  Input.h  SimpleApp.h
include/fengine/GUI/: Cursor.h  Environment.h
include/fengine/Physics/: Collider.h  Material.h  PhysicsConstants.h  PhysicsSystem.h  PhysicsSystemException.h  World.h
include/fengine/Scene/: SceneHelper.h
include/fengine/Script/: ScriptInterpreter.h  ScriptInterpreterException.h
include/fengine/Utility/: BlinkModel.h  MultiLineFontString.h  (+7 more)
scripts/python/: ColorRGB.py  ColorRGBA.py  Logger.py  PlatformInfo.py  Quaternion.py  Transform.py  Vector2.py  Vector3.py  Vector4.py
shaders/: BRDF.hlsl  BezierDrawingPixelShader.glsl  BezierDrawingShader.hlsl  BezierDrawingVertexShader.glsl  BoundingBoxPixelShader.glsl  BoundingBoxShader.hlsl  BoundingBoxVertexShader.glsl  Common.Core.glsl  Common.Core.hlsl  Common.RayTracing.glsl  Common.RayTracing.hlsl  Common.Shading.glsl  Common.Shading.hlsl  Common.Shadow.glsl  Common.Shadow.hlsl  CustomMIPMapsPixelShader.glsl  CustomMIPMapsShader.hlsl  CustomMIPMapsVertexShader.glsl  FontDrawingPixelShader.glsl  FontDrawingShader.hlsl  FontDrawingVertexShader.glsl  GaussianBlurPixelShader.glsl  GaussianBlurShader.hlsl  HiZMIPMapsPixelShader.glsl  HiZMIPMapsShader.hlsl  ImageArrayDrawingPixelShader.glsl  ImageArrayDrawingShader.hlsl  ImageArrayDrawingVertexShader.glsl  PostProcessingVertexShader.glsl  PrimitiveDrawingPixelShader.glsl  PrimitiveDrawingShader.hlsl  PrimitiveDrawingVertexShader.glsl  SSCTHiZMapPixelShader.glsl  SSCTHorzBlurPixelShader.glsl  SSCTReflectionPixelShader.glsl  SSCTReflectionVertexShader.glsl  SSCTVertBlurPixelShader.glsl  SSCTVisibilityMapPixelShader.glsl  SSLRRayTracePixelShader.glsl  SSLRRayTraceVertexShader.glsl  (+18 more)
shaders/Resources/: .gitignore
sources/Core/: SDKGuard.cpp  StringModifier.cpp  Version.cpp
sources/Daemon/: DaemonServer.cpp  DaemonServer.h  DaemonServerParameters.cpp  DaemonServerParameters.h  ServerSideClient.h
sources/Editor/: EditorApplication.cpp  EditorApplication.h  EditorSelectionSceneRenderer.cpp  EditorSelectionSceneRenderer.h  EditorView.cpp  EditorView.h  EditorViewProjector.cpp  EditorViewProjector.h  EditorViewSceneRenderer.cpp  EditorViewSceneRenderer.h
sources/Engine/: App.cpp  EngineDevice.cpp  EngineInfo.cpp  Input.cpp  SimpleApp.cpp
sources/GUI/: Environment.cpp
sources/Math/: AprxMathFunctions.cpp  BaseArithmetic.cpp  BitArithmetic.cpp
sources/Physics/: Collider.cpp  GeometryTriangulator.cpp  GeometryTriangulator.h  PhysicsSystem.cpp  World.cpp
sources/Scene/: SceneHelper.cpp
sources/Script/: ScriptInterpreter.cpp
sources/Utility/: BlinkModel.cpp  MultiLineFontString.cpp  RendererProfilerOutput.cpp  RichTextModel.cpp  ScrollBarModel.cpp  SelectionAreaModel.cpp  SelectionGridModel.cpp  TextFieldModel.cpp  WaveformRenderer.cpp
tests/: TestUtils.h
tests/Audio/: CMakeLists.txt  main.cpp
tests/Console/: .gitignore  CMakeLists.txt  main.cpp  test.txt
tests/CubeMap/: CMakeLists.txt  CubeMapPixelShader.glsl  CubeMapShader.hlsl  CubeMapVertexShader.glsl  main.cpp
tests/D3D11/: .gitignore  CMakeLists.txt  TestMeshShader.hlsl  TestShader.hlsl  main.cpp
tests/DaemonClient/: CMakeLists.txt  main.cpp
tests/ForkSCript/: CMakeLists.txt  FSCTestScript.fsc  TestXML.xml  TestXMLOut.xml  main.cpp
tests/GUI/: CMakeLists.txt  LCD-Monitor.mtl  main.cpp
tests/HTML/: TestHTMLPage.html
tests/HiZMap/: CMakeLists.txt  DepthPixelShader.glsl  DepthVertexShader.glsl  Gen MIP Maps Pseudocode.cpp  main.cpp
tests/Network/: CMakeLists.txt  main.cpp
tests/Physics/: CMakeLists.txt  TestShader.glfrag  TestShader.glvert  main.cpp
tests/RayTracing/: CMakeLists.txt  RayTracing.glfrag  RayTracing.glvert  main.cpp
tests/RenderTargets/: CMakeLists.txt  RenderTargetPixelShader.glsl  RenderTargetVertexShader.glsl  main.cpp
tests/SSCT/: .gitignore  CMakeLists.txt  GBufferShader.glfrag  GBufferShader.glvert  GBufferShader.hlsl  GBufferSkyBoxShader.glfrag  GBufferSkyBoxShader.glvert  SSCTTestScene2-Windows.mtl  SSCTTestScene2.mtl  main.cpp
tests/Scene/: CMakeLists.txt  TestShader.glfrag  TestShader.glvert  TestShader.hlsl  main.cpp
tests/Script/: CMakeLists.txt  TestScript1.py  TestScript2.py  main.cpp
tests/Video/: CMakeLists.txt  main.cpp
tools/ShaderFileConverter/: CMakeLists.txt  main.cpp
tutorials/01-GettingStarted/: CMakeLists.txt  main.cpp
(+1088 files in other folders)
